syntax = "proto3";

package match;

// Match Post Messages
message MatchPost {
  string id = 1;
  string title = 2;
  int32 userno = 3;
  string author = 4;
  string content = 5;
  string movieTitle = 6;
  string theaterName = 7;
  string showTime = 8;
  int32 maxParticipants = 9;
  int32 currentParticipants = 10;
  string location = 11;
  string createdAt = 12;
  string updatedAt = 13;
  string deletedAt = 14;
}

message MatchApplication {
  string id = 1;
  string matchPostId = 2;
  int32 applicantUserno = 3;
  string applicantName = 4;
  string message = 5;
  string status = 6; // pending, accepted, rejected
  string createdAt = 7;
}

// Request Messages
message GetMatchPostsRequest {
  int32 page = 1;
  int32 pageSize = 2;
}

message CreateMatchPostRequest {
  string title = 1;
  string content = 2;
  string movieTitle = 3;
  string theaterName = 4;
  string showTime = 5;
  int32 maxParticipants = 6;
  string location = 7;
  int32 userno = 8;
  string author = 9;
}

message GetMatchPostRequest {
  string matchId = 1;
}

message UpdateMatchPostRequest {
  string matchId = 1;
  string title = 2;
  string content = 3;
  string movieTitle = 4;
  string theaterName = 5;
  string showTime = 6;
  int32 maxParticipants = 7;
  string location = 8;
  int32 userno = 9;
}

message DeleteMatchPostRequest {
  string matchId = 1;
  int32 userno = 2;
}

message ApplyToMatchRequest {
  string matchId = 1;
  int32 applicantUserno = 2;
  string applicantName = 3;
  string message = 4;
}

message GetMatchApplicationsRequest {
  string matchId = 1;
  int32 userno = 2;
}

message UpdateApplicationStatusRequest {
  string matchId = 1;
  string applicationId = 2;
  string status = 3; // accepted, rejected
  int32 userno = 4;
}

// Response Messages
message MatchPostResponse {
  repeated MatchPost matchPosts = 1;
  bool hasNext = 2;
}

message SingleMatchPostResponse {
  MatchPost matchPost = 1;
}

message MatchApplicationsResponse {
  repeated MatchApplication applications = 1;
}

message CommonResponse {
  bool success = 1;
  string message = 2;
}

message ApplicationResponse {
  bool success = 1;
  string message = 2;
  string chatRoomId = 3; // 수락된 경우 채팅방 ID 반환
}

// Service Definition
service MatchService {
  rpc GetMatchPosts(GetMatchPostsRequest) returns (MatchPostResponse);
  rpc CreateMatchPost(CreateMatchPostRequest) returns (SingleMatchPostResponse);
  rpc GetMatchPost(GetMatchPostRequest) returns (SingleMatchPostResponse);
  rpc UpdateMatchPost(UpdateMatchPostRequest) returns (SingleMatchPostResponse);
  rpc DeleteMatchPost(DeleteMatchPostRequest) returns (CommonResponse);
  rpc ApplyToMatch(ApplyToMatchRequest) returns (CommonResponse);
  rpc GetMatchApplications(GetMatchApplicationsRequest) returns (MatchApplicationsResponse);
  rpc UpdateApplicationStatus(UpdateApplicationStatusRequest) returns (ApplicationResponse);
}
